# PA-TAC

./: Cargo.toml  PA-presentation.pptx  RBFtestRegre.ipynb  RBFtestclassifi.ipynb  README.md  graph.dot  linearRegression.ipynb  losse.ipynb  nasaScrap.py  planeteLinear.ipynb  rapport.docx  requirements.txt  simpleLinean.ipynb  simpleLinear.ipynb  simpleLinear.py  simpleLinearDataset.ipynb  simpleMLP.html  simpleMLP.ipynb  tensorflow.ipynb
.cargo/: config.toml
PA/: Cargo.toml
PA/rbf/: Cargo.toml
PA/rbf/src/: lib.rs
PA/src/: main.rs
data/: listExoplanetsLinkCurrent.json  listExoplanetsLinkFull.json
modele/linear/: Cargo.toml
modele/mlp/: .gitignore  Cargo.toml  architecture.txt
modele/mlp/src/: activation.rs  helpers.rs  interop.rs  lib.rs  mlp.rs  neural_matrix.rs  optimizer.rs  tensor.rs  tensorboard.rs
modele/rbf/: Cargo.toml
modele/rbf_classification/: Cargo.toml
modele/rbf_classification/src/: main.rs  rbf.rs
modele/rbf_network/: Cargo.toml  build.rs
modele/rbf_network/.cargo/: config.toml
modele/rbf_network/src/: lib.rs  main.rs  rbf.rs
parbf/parbf/: Cargo.toml
rbf/parbf/: Cargo.toml
rbf/rbf_model/: Cargo.toml
rbf/src/: activation.rs  lib.rs  rbf_model.rs
rbfff/: Cargo.toml
rbfff/rbfff/: Cargo.toml
rbfff/src/: main.rs
result/: result.md
script/: README.md  nasaPlaneteScrap.js  nasaPlaneteScrap.py  nasaPlaneteScrap2.js  package.json  plotDisplay.py  plotDisplayLinear.py  requirement.txt  resize.py
site/backend/: datasets.json  db.sqlite3
site/frontend/: package-lock.json  package.json
src/: main.rs  rbf.rs
(+115 files in other folders)
