[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

[lib]
name = "mlp_classification"
crate-type = ["cdylib"]

[dependencies]
rand = "0.9.0-alpha.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tensorboard-rs = "0.5.9"
chrono = "0.4.38"
image = "0.25.1"
png = "0.17.13"