[package]
name = "rbf_network"
version = "0.1.0"
edition = "2021"
build = "build.rs"



[dependencies]
ndarray = "0.15"
ndarray-linalg = { version = "0.16.0", features = ["intel-mkl"] }
rand = "0.8.5"
ring = "0.17.8"
intel-mkl-src = "0.8"
libc = "0.2.155"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cc = "1.0"


